syntax = "proto3";

option csharp_namespace = "DigiWACS.Protos";

package DigiWACS;

service Units {
    rpc GetPosition (SingleUnitPositionRequest) returns (SingleUnitPositionReply);
}
service Authentication {
    rpc Authenticate(Credential) returns (JwtToken);
}

message Credential {
    string user = 1;
    string pass = 2;
}

message JwtToken {
    string jwtToken = 1;
}
message SingleUnitPositionRequest {
    string id = 1;
}

message SingleUnitPositionReply {
    double lat = 1;
    double long = 2;
    double altitude = 3;
    double speed = 4;
    double heading = 5;
    string unitName = 6;
}

message MultiUnitPositionReply {
    repeated SingleUnitPositionReply units = 1;
}
